feat: implement User listing/editing/deleting from Admin app

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,7 @@
       "@mogami/admin/ui/layout": ["libs/admin/ui/layout/src/index.ts"],
       "@mogami/admin/ui/loader": ["libs/admin/ui/loader/src/index.ts"],
       "@mogami/admin/user/feature": ["libs/admin/user/feature/src/index.ts"],
+      "@mogami/admin/user/ui": ["libs/admin/user/ui/src/index.ts"],
       "@mogami/airdrop": ["libs/airdrop/src/index.ts"],
       "@mogami/api-app-module": ["apps/api/src/app/app.module.ts"],
       "@mogami/api/account/data-access": ["libs/api/account/data-access/src/index.ts"],
