--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "fs-extra": "^10.0.1",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
+    "graphql-type-json": "^0.3.2",
     "joi": "^17.6.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
