--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@chakra-ui/react": "^1.8.7",
     "@chakra-ui/theme": "^1.14.0",
     "@chakra-ui/theme-tools": "^1.3.6",
+    "@choc-ui/chakra-autocomplete": "^4.20.1",
     "@choc-ui/paginator": "^3.4.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
