--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@mogami/admin/app/feature": ["libs/admin/app/feature/src/index.ts"],
+      "@mogami/admin/app/ui": ["libs/admin/app/ui/src/index.ts"],
       "@mogami/admin/auth/data-access": ["libs/admin/auth/data-access/src/index.ts"],
       "@mogami/admin/auth/feature": ["libs/admin/auth/feature/src/index.ts"],
       "@mogami/admin/auth/ui": ["libs/admin/auth/ui/src/index.ts"],
@@ -24,6 +25,7 @@
       "@mogami/admin/ui/layout": ["libs/admin/ui/layout/src/index.ts"],
       "@mogami/admin/ui/loader": ["libs/admin/ui/loader/src/index.ts"],
       "@mogami/admin/user/feature": ["libs/admin/user/feature/src/index.ts"],
+      "@mogami/admin/user/ui": ["libs/admin/user/ui/src/index.ts"],
       "@mogami/airdrop": ["libs/airdrop/src/index.ts"],
       "@mogami/api-app-module": ["apps/api/src/app/app.module.ts"],
       "@mogami/api/account/data-access": ["libs/api/account/data-access/src/index.ts"],
