--- a/package.json
+++ b/package.json
@@ -107,17 +107,17 @@
     "@nestjs/schematics": "^8.0.8",
     "@nestjs/testing": "^8.4.3",
     "@nrwl/cli": "13.9.5",
-    "@nrwl/cypress": "13.9.5",
-    "@nrwl/eslint-plugin-nx": "13.9.5",
-    "@nrwl/jest": "13.9.5",
-    "@nrwl/js": "13.9.5",
-    "@nrwl/linter": "13.9.5",
-    "@nrwl/nest": "13.9.5",
-    "@nrwl/node": "13.9.5",
-    "@nrwl/nx-cloud": "13.1.6",
-    "@nrwl/react": "13.9.5",
-    "@nrwl/web": "13.9.5",
-    "@nrwl/workspace": "13.9.5",
+    "@nrwl/cypress": "13.10.1",
+    "@nrwl/eslint-plugin-nx": "13.10.1",
+    "@nrwl/jest": "13.10.1",
+    "@nrwl/js": "13.10.1",
+    "@nrwl/linter": "13.10.1",
+    "@nrwl/nest": "13.10.1",
+    "@nrwl/node": "13.10.1",
+    "@nrwl/nx-cloud": "13.2.2",
+    "@nrwl/react": "13.10.1",
+    "@nrwl/web": "13.10.1",
+    "@nrwl/workspace": "13.10.1",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@swc/core": "^1.2.161",
     "@swc/helpers": "^0.3.8",
@@ -133,12 +133,12 @@
     "@types/react-router-dom": "5.3.3",
     "@types/supertest": "^2.0.12",
     "@types/yup": "^0.29.13",
-    "@typescript-eslint/eslint-plugin": "~5.17.0",
-    "@typescript-eslint/parser": "~5.17.0",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.2.4",
     "cypress": "^9.5.3",
-    "eslint": "~8.12.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.25.4",
@@ -149,7 +149,7 @@
     "jest": "27.5.1",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.15",
-    "nx": "13.9.5",
+    "nx": "13.10.1",
     "prettier": "^2.6.1",
     "prisma": "^3.11.1",
     "react-test-renderer": "17.0.2",
