test: Update test to use localhost

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,9 +14,12 @@ env:
   COOKIE_NAME: '__session'
   DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami'
   JWT_SECRET: 'MogamiJwtSecret!'
+  MOGAMI_AIRDROP_DEFAULT: 1
+  MOGAMI_AIRDROP_MAX: 50000
+  MOGAMI_AIRDROP_SECRET_KEY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
   MOGAMI_MINT_DECIMALS: 5
-  MOGAMI_MINT_PUBLIC_KEY: 'KinDesK3dYWo3R2wDk6Ucaf31tvQCCSYyL8Fuqp33GX'
-  MOGAMI_SUBSIDIZER_SECRET_KEY: '[155,252,122,114,97,197,108,234,140,3,107,199,138,221,65,69,142,81,202,134,41,125,12,24,87,224,89,114,153,146,138,12,5,84,102,38,7,100,200,251,34,72,143,134,254,202,250,134,208,29,170,161,12,132,240,98,16,241,4,69,193,117,148,215]'
+  MOGAMI_MINT_PUBLIC_KEY: 'MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek'
+  MOGAMI_SUBSIDIZER_SECRET_KEY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
   SOLANA_RPC_ENDPOINT: 'http://localhost:8899'
 
