chore: run api and demo app in demo-e2e tests

--- a/apps/demo-e2e/project.json
+++ b/apps/demo-e2e/project.json
@@ -6,8 +6,9 @@
     "e2e": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
+        "baseUrl": "http://localhost:4200",
         "cypressConfig": "apps/demo-e2e/cypress.json",
-        "devServerTarget": "demo:serve",
+        "devServerTarget": "demo:serve-e2e",
         "key": "3326e336-7770-4dba-9714-78836b51aef3",
         "record": true
       },
