feat: change domain mogami.kin.org to mogami.io

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-ADMIN_EMAIL="mogami@kin.org"
+ADMIN_EMAIL="admin@mogami.io"
 ADMIN_PASSWORD="Mogami@dmin1"
 COOKIE_DOMAIN="localhost"
 COOKIE_NAME="__session"
@@ -8,7 +8,7 @@ JWT_SECRET="MogamiJwtSecret!"
 MOGAMI_AIRDROP_DEFAULT=1
 MOGAMI_AIRDROP_MAX=50000
 MOGAMI_AIRDROP_SECRET_KEY=
-MOGAMI_DOMAIN="local.mogami.kin.org"
+MOGAMI_DOMAIN="local.mogami.io"
 MOGAMI_MAINNET=false
 MOGAMI_MINT_DECIMALS=5
 MOGAMI_MINT_PUBLIC_KEY=KinDesK3dYWo3R2wDk6Ucaf31tvQCCSYyL8Fuqp33GX
