--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,6 +22,7 @@ env:
   MOGAMI_SUBSIDIZER_SECRET_KEY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
   SOLANA_RPC_ENDPOINT: 'http://localhost:8899'
+  CODECOV_TOKEN: 'c5aaa429-ec49-4821-ba14-5ade2ffb1b54'
 
 jobs:
   main:
@@ -54,6 +55,13 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
+      - uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./apps/demo-e2e/coverage/
+          files: ./clover.xml
+          path_to_write_report: ./apps/demo-e2e/coverage/codecov_report.txt
+          verbose: true
       - run: yarn install --frozen-lockfile
       - run: yarn format:check
       - run: yarn build
