--- a/nx.json
+++ b/nx.json
@@ -7,6 +7,7 @@
     "defaultCollection": "@nrwl/nest"
   },
   "implicitDependencies": {
+    ".github/workflows/build-test.yml": "*",
     "package.json": {
       "dependencies": "*",
       "devDependencies": "*"
