feat: add GraphQL BigInt scalar

--- a/package.json
+++ b/package.json
@@ -74,9 +74,11 @@
     "framer-motion": "^6",
     "fs-extra": "^10.0.1",
     "graphql": "^16.3.0",
+    "graphql-scalars": "^1.17.0",
     "graphql-tag": "^2.12.6",
     "graphql-type-json": "^0.3.2",
     "joi": "^17.6.0",
+    "json-bigint-patch": "^0.0.8",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
