chore: update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 ADMIN_EMAIL="admin@mogami.io"
 ADMIN_PASSWORD="Mogami@dmin1"
+APP_1_FEE_PAYER_BYTE_ARRAY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
 COOKIE_DOMAIN="localhost"
 COOKIE_NAME="__session"
 CORS_ORIGINS=http://localhost:4200
@@ -7,8 +8,8 @@ DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami"
 JWT_SECRET="MogamiJwtSecret!"
 MOGAMI_AIRDROP_DEFAULT=1
 MOGAMI_AIRDROP_MAX=50000
-MOGAMI_AIRDROP_SECRET_KEY=
+MOGAMI_AIRDROP_SECRET_KEY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
 MOGAMI_MAINNET=false
 MOGAMI_MINT_DECIMALS=5
-MOGAMI_MINT_PUBLIC_KEY=KinDesK3dYWo3R2wDk6Ucaf31tvQCCSYyL8Fuqp33GX
-SOLANA_RPC_ENDPOINT=devnet
+MOGAMI_MINT_PUBLIC_KEY=MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek
+SOLANA_RPC_ENDPOINT=http://localhost:8899
