--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mogami",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "license": "MIT",
   "scripts": {
     "build": "yarn build:admin && yarn prisma generate && yarn build:api",
