--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@kin-tools/kin-memo": "^1.5.0",
     "@kin-tools/kin-transaction": "^1.5.0",
     "@nestjs/apollo": "^10.0.9",
+    "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.4.4",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.4",
