feat: add Cluster and Mint to API

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,6 +38,9 @@
       "@mogami/api/auth/data-access": ["libs/api/auth/data-access/src/index.ts"],
       "@mogami/api/auth/feature": ["libs/api/auth/feature/src/index.ts"],
       "@mogami/api/auth/util": ["libs/api/auth/util/src/index.ts"],
+      "@mogami/api/cluster/data-access": ["libs/api/cluster/data-access/src/index.ts"],
+      "@mogami/api/cluster/feature": ["libs/api/cluster/feature/src/index.ts"],
+      "@mogami/api/cluster/util": ["libs/api/cluster/util/src/index.ts"],
       "@mogami/api/config/data-access": ["libs/api/config/data-access/src/index.ts"],
       "@mogami/api/config/feature": ["libs/api/config/feature/src/index.ts"],
       "@mogami/api/core/data-access": ["libs/api/core/data-access/src/index.ts"],
