--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,8 @@
       "@mogami/admin/auth/data-access": ["libs/admin/auth/data-access/src/index.ts"],
       "@mogami/admin/auth/feature": ["libs/admin/auth/feature/src/index.ts"],
       "@mogami/admin/auth/ui": ["libs/admin/auth/ui/src/index.ts"],
+      "@mogami/admin/cluster/feature": ["libs/admin/cluster/feature/src/index.ts"],
+      "@mogami/admin/cluster/ui": ["libs/admin/cluster/ui/src/index.ts"],
       "@mogami/admin/home/feature": ["libs/admin/home/feature/src/index.ts"],
       "@mogami/admin/shell/feature": ["libs/admin/shell/feature/src/index.ts"],
       "@mogami/admin/ui/alert": ["libs/admin/ui/alert/src/index.ts"],
