fix: make sure library deps are defined as 'dependencies' in package.json

--- a/libs/keypair/project.json
+++ b/libs/keypair/project.json
@@ -6,6 +6,7 @@
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
+        "buildableProjectDepsInPackageJsonType": "dependencies",
         "outputPath": "dist/libs/keypair",
         "tsConfig": "libs/keypair/tsconfig.lib.json",
         "packageJson": "libs/keypair/package.json",
