--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.11.1",
+    "@scure/bip39": "^1.0.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/spl-token-registry": "^0.2.3961",
@@ -66,7 +67,6 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "bignumber": "^1.1.0",
-    "bip39": "^3.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
