fix: add implicit dependencies for demo-e2e project

--- a/apps/demo-e2e/project.json
+++ b/apps/demo-e2e/project.json
@@ -26,5 +26,5 @@
     }
   },
   "tags": [],
-  "implicitDependencies": ["demo"]
+  "implicitDependencies": ["demo", "api", "solana", "sdk", "keypair"]
 }
