feat: add sdk-e2e app

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -68,6 +68,7 @@
       "@mogami/demo/shell/feature": ["libs/demo/shell/feature/src/index.ts"],
       "@mogami/keypair": ["libs/keypair/src/index.ts"],
       "@mogami/sdk": ["libs/sdk/src/index.ts"],
+      "@mogami/sdk-app-module": ["libs/sdk/src/app/app.module.ts"],
       "@mogami/shared/util/admin-sdk": ["libs/shared/util/admin-sdk/src/index.ts"],
       "@mogami/solana": ["libs/solana/src/index.ts"]
     }
