--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
           "error",
           {
             "enforceBuildableLibDependency": true,
-            "allow": ["@mogami/api-app-module"],
+            "allow": ["@mogami/sdk-app-module"],
             "depConstraints": [
               {
                 "sourceTag": "*",
