--- a/apps/sdk-e2e/tsconfig.app.json
+++ b/apps/sdk-e2e/tsconfig.app.json
@@ -7,6 +7,6 @@
     "emitDecoratorMetadata": true,
     "target": "es2015"
   },
-  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
+  "exclude": ["jest.config.js", "**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
 }
