refactor: vendor in fork of ed25519-hd-key dependency

--- a/package.json
+++ b/package.json
@@ -71,9 +71,9 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.21.1",
+    "create-hmac": "^1.1.7",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
-    "ed25519-hd-key": "^1.2.0",
     "express": "^4.17.3",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
@@ -134,6 +134,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
+    "@types/create-hmac": "^1.1.0",
     "@types/cron": "^1.7.3",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.31",
