--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "format:write": "nx format:write",
     "prepare": "husky install",
     "start": "yarn prisma db push && node dist/apps/api/main.js",
-    "test": "nx test && yarn test:admin-e2e && yarn test:demo-e2e",
+    "test": "nx test && yarn test:admin-e2e && yarn test:demo-e2e && yarn test:sdk-e2e",
     "test:admin-e2e:watch": "nx run admin-e2e:e2e --headed --watch",
     "test:admin-e2e": "nx run admin-e2e:e2e",
     "test:api-e2e:watch": "nx run api-e2e:e2e --verbose --watch",
     "test:api-e2e": "nx run api-e2e:e2e",
+    "test:sdk-e2e:watch": "nx run sdk-e2e:e2e --verbose --watch",
+    "test:sdk-e2e": "nx run sdk-e2e:e2e",
     "test:demo-e2e:watch": "nx run demo-e2e:e2e --headed --watch",
     "test:demo-e2e": "nx run demo-e2e:e2e"
   },
