--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@nestjs/testing": "^8.4.4",
     "@nrwl/cli": "14.1.7",
     "@nrwl/cypress": "14.1.7",
+    "@nrwl/devkit": "14.1.9",
     "@nrwl/eslint-plugin-nx": "14.1.7",
     "@nrwl/jest": "14.1.7",
     "@nrwl/js": "14.1.7",
@@ -124,6 +125,7 @@
     "@nrwl/nest": "14.1.7",
     "@nrwl/node": "14.1.7",
     "@nrwl/nx-cloud": "14.0.5",
+    "@nrwl/nx-plugin": "^14.1.9",
     "@nrwl/react": "14.1.7",
     "@nrwl/web": "14.1.7",
     "@nrwl/workspace": "14.1.7",
