--- a/.github/workflows/test-demo-e2e.yml
+++ b/.github/workflows/test-demo-e2e.yml
@@ -62,7 +62,7 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn cypress install
       - run: yarn prisma db push
-      - run: yarn nx e2e demo-e2e
+      - run: yarn nx e2e demo-e2e --skip-nx-cache
   pr:
     runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'pull_request' }}
@@ -98,4 +98,4 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn cypress install
       - run: yarn prisma db push
-      - run: yarn nx e2e demo-e2e
+      - run: yarn nx e2e demo-e2e --skip-nx-cache
