--- a/package.json
+++ b/package.json
@@ -117,20 +117,20 @@
     "@graphql-codegen/typescript-urql": "^3.5.8",
     "@nestjs/schematics": "^8.0.10",
     "@nestjs/testing": "^8.4.4",
-    "@nrwl/cli": "14.1.7",
-    "@nrwl/cypress": "14.1.7",
+    "@nrwl/cli": "14.1.9",
+    "@nrwl/cypress": "14.1.9",
     "@nrwl/devkit": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.7",
-    "@nrwl/jest": "14.1.7",
-    "@nrwl/js": "14.1.7",
-    "@nrwl/linter": "14.1.7",
-    "@nrwl/nest": "14.1.7",
-    "@nrwl/node": "14.1.7",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.1.9",
+    "@nrwl/js": "14.1.9",
+    "@nrwl/linter": "14.1.9",
+    "@nrwl/nest": "14.1.9",
+    "@nrwl/node": "14.1.9",
     "@nrwl/nx-cloud": "14.0.5",
-    "@nrwl/nx-plugin": "^14.1.9",
-    "@nrwl/react": "14.1.7",
-    "@nrwl/web": "14.1.7",
-    "@nrwl/workspace": "14.1.7",
+    "@nrwl/nx-plugin": "14.1.9",
+    "@nrwl/react": "14.1.9",
+    "@nrwl/web": "14.1.9",
+    "@nrwl/workspace": "14.1.9",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@swc/core": "^1.2.177",
     "@swc/helpers": "^0.3.8",
@@ -164,7 +164,7 @@
     "jest": "27.5.1",
     "lint-staged": "^12.3.7",
     "nodemon": "^2.0.16",
-    "nx": "14.1.7",
+    "nx": "14.1.9",
     "prettier": "^2.6.2",
     "prisma": "^3.11.1",
     "react-test-renderer": "17.0.2",
