chore: update deps (#210)
* chore: update Nx to latest v14

* chore: update api deps

* chore: update TypeScript

* chore: update nestjs deps

--- a/package.json
+++ b/package.json
@@ -47,48 +47,48 @@
     "@heroicons/react": "^1.0.6",
     "@kin-tools/kin-memo": "^1.5.0",
     "@kin-tools/kin-transaction": "^1.5.0",
-    "@nestjs/apollo": "^10.0.9",
-    "@nestjs/axios": "^0.0.7",
-    "@nestjs/common": "^8.4.4",
-    "@nestjs/config": "^2.0.0",
-    "@nestjs/core": "^8.4.4",
-    "@nestjs/graphql": "^10.0.10",
-    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/apollo": "^10.0.13",
+    "@nestjs/axios": "^0.0.8",
+    "@nestjs/common": "^8.4.5",
+    "@nestjs/config": "^2.0.1",
+    "@nestjs/core": "^8.4.5",
+    "@nestjs/graphql": "^10.0.13",
+    "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.4.4",
-    "@nestjs/schedule": "^1.1.0",
+    "@nestjs/platform-express": "^8.4.5",
+    "@nestjs/schedule": "^2.0.1",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
-    "@prisma/client": "^3.11.1",
+    "@prisma/client": "^3.14.0",
     "@scure/bip39": "^1.0.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
-    "@solana/spl-token-registry": "^0.2.3961",
-    "@solana/web3.js": "^1.37.0",
-    "apollo-server-express": "^3.6.7",
-    "axios": "^0.26.1",
+    "@solana/spl-token-registry": "^0.2.4154",
+    "@solana/web3.js": "^1.43.2",
+    "apollo-server-express": "^3.8.1",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bignumber": "^1.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
-    "core-js": "^3.21.1",
+    "core-js": "^3.22.7",
     "create-hmac": "^1.1.7",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^6",
-    "fs-extra": "^10.0.1",
-    "graphql": "^16.3.0",
+    "fs-extra": "^10.1.0",
+    "graphql": "^16.5.0",
     "graphql-scalars": "^1.17.0",
     "graphql-tag": "^2.12.6",
     "graphql-type-json": "^0.3.2",
     "joi": "^17.6.0",
     "json-bigint-patch": "^0.0.8",
     "lodash": "^4.17.21",
-    "passport": "^0.5.2",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "17.0.2",
@@ -98,83 +98,83 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
     "rxjs": "^7.5.5",
-    "swagger-ui-express": "^4.3.0",
-    "tslib": "^2.3.1",
+    "swagger-ui-express": "^4.4.0",
+    "tslib": "^2.4.0",
     "urql": "^2.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "7.16.11",
-    "@cypress/code-coverage": "^3.9.12",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "7.18.2",
+    "@cypress/code-coverage": "^3.10.0",
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/fragment-matcher": "^3.2.1",
     "@graphql-codegen/introspection": "^2.1.1",
-    "@graphql-codegen/typescript": "^2.4.9",
-    "@graphql-codegen/typescript-document-nodes": "^2.2.9",
-    "@graphql-codegen/typescript-operations": "^2.3.6",
-    "@graphql-codegen/typescript-urql": "^3.5.8",
-    "@nestjs/schematics": "^8.0.10",
-    "@nestjs/testing": "^8.4.4",
-    "@nrwl/cli": "14.1.7",
-    "@nrwl/cypress": "14.1.7",
+    "@graphql-codegen/typescript": "^2.4.11",
+    "@graphql-codegen/typescript-document-nodes": "^2.2.11",
+    "@graphql-codegen/typescript-operations": "^2.4.0",
+    "@graphql-codegen/typescript-urql": "^3.5.10",
+    "@nestjs/schematics": "^8.0.11",
+    "@nestjs/testing": "^8.4.5",
+    "@nrwl/cli": "14.1.9",
+    "@nrwl/cypress": "14.1.9",
     "@nrwl/devkit": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.7",
-    "@nrwl/jest": "14.1.7",
-    "@nrwl/js": "14.1.7",
-    "@nrwl/linter": "14.1.7",
-    "@nrwl/nest": "14.1.7",
-    "@nrwl/node": "14.1.7",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.1.9",
+    "@nrwl/js": "14.1.9",
+    "@nrwl/linter": "14.1.9",
+    "@nrwl/nest": "14.1.9",
+    "@nrwl/node": "14.1.9",
     "@nrwl/nx-cloud": "14.0.5",
-    "@nrwl/nx-plugin": "^14.1.9",
-    "@nrwl/react": "14.1.7",
-    "@nrwl/web": "14.1.7",
-    "@nrwl/workspace": "14.1.7",
-    "@openapitools/openapi-generator-cli": "^2.4.26",
-    "@swc/core": "^1.2.177",
-    "@swc/helpers": "^0.3.8",
+    "@nrwl/nx-plugin": "14.1.9",
+    "@nrwl/react": "14.1.9",
+    "@nrwl/web": "14.1.9",
+    "@nrwl/workspace": "14.1.9",
+    "@openapitools/openapi-generator-cli": "^2.5.1",
+    "@swc/core": "^1.2.194",
+    "@swc/helpers": "^0.3.16",
     "@testing-library/react": "12.1.4",
     "@testing-library/react-hooks": "7.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
     "@types/create-hmac": "^1.1.0",
-    "@types/cron": "^1.7.3",
+    "@types/cron": "^2.0.0",
     "@types/jest": "27.4.1",
-    "@types/node": "17.0.31",
+    "@types/node": "17.0.35",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/react-router-dom": "5.3.3",
     "@types/supertest": "^2.0.12",
-    "@types/yup": "^0.29.13",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
+    "@types/yup": "^0.29.14",
+    "@typescript-eslint/eslint-plugin": "5.26.0",
+    "@typescript-eslint/parser": "5.26.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.2.5",
-    "cypress": "^9.5.3",
-    "eslint": "8.12.0",
+    "cypress": "^9.7.0",
+    "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.3.0",
     "fake-indexeddb": "^3.1.7",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "jest": "27.5.1",
-    "lint-staged": "^12.3.7",
+    "lint-staged": "^12.4.2",
     "nodemon": "^2.0.16",
-    "nx": "14.1.7",
+    "nx": "14.1.9",
     "prettier": "^2.6.2",
-    "prisma": "^3.11.1",
+    "prisma": "^3.14.0",
     "react-test-renderer": "17.0.2",
     "stream-browserify": "^3.0.0",
     "supertest": "6.2.3",
     "ts-jest": "27.1.4",
-    "ts-morph": "^14.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "~4.5.2",
-    "webpack": "5.70.0"
+    "ts-morph": "^15.0.0",
+    "ts-node": "^10.8.0",
+    "typescript": "~4.7.2",
+    "webpack": "5.72.1"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,graphql}": [
