refactor: clean up linting errors in API code

--- a/libs/shared/util/admin-sdk/src/codegen.yml
+++ b/libs/shared/util/admin-sdk/src/codegen.yml
@@ -13,6 +13,8 @@ generates:
       - fragment-matcher
   libs/shared/util/admin-sdk/src/generated/graphql.tsx:
     plugins:
+      - add:
+          content: '/* eslint-disable */'
       - 'typescript'
       - 'typescript-operations'
       - 'typescript-urql'
