feat: generate Prisma svg diagram based on schema.prisma

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "format:write": "nx format:write",
     "prepare": "husky install",
     "start": "yarn prisma db push && node dist/apps/api/main.js",
+    "structure": "open libs/api/core/data-access/src/prisma/prisma-structure.svg",
     "test": "nx test && yarn test:admin-e2e && yarn test:demo-e2e && yarn test:sdk-e2e",
     "test:admin-e2e:watch": "nx run admin-e2e:e2e --headed --watch",
     "test:admin-e2e": "nx run admin-e2e:e2e",
@@ -115,6 +116,7 @@
     "@graphql-codegen/typescript-document-nodes": "^2.2.11",
     "@graphql-codegen/typescript-operations": "^2.4.0",
     "@graphql-codegen/typescript-urql": "^3.5.10",
+    "@mermaid-js/mermaid-cli": "^9.1.2",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.5",
     "@nrwl/cli": "14.1.9",
@@ -167,6 +169,7 @@
     "nx": "14.1.9",
     "prettier": "^2.6.2",
     "prisma": "^3.14.0",
+    "prisma-erd-generator": "^0.11.4",
     "react-test-renderer": "17.0.2",
     "stream-browserify": "^3.0.0",
     "supertest": "6.2.3",
