--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@solana/spl-token": "^0.2.0",
     "@solana/spl-token-registry": "^0.2.4154",
     "@solana/web3.js": "^1.43.2",
+    "@willsoto/nestjs-prometheus": "^4.6.0",
     "apollo-server-express": "^3.8.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
@@ -93,6 +94,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "prisma-erd-generator": "^0.11.4",
+    "prom-client": "^14.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
