--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@heroicons/react": "^1.0.6",
     "@kin-tools/kin-memo": "^1.5.0",
     "@kin-tools/kin-transaction": "^1.5.0",
+    "@metinseylan/nestjs-opentelemetry": "^2.0.7",
     "@nestjs/apollo": "^10.0.13",
     "@nestjs/axios": "^0.0.8",
     "@nestjs/common": "^8.4.5",
@@ -60,6 +61,8 @@
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
+    "@opentelemetry/exporter-prometheus": "^0.29.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.29.1",
     "@prisma/client": "^3.14.0",
     "@scure/bip39": "^1.0.0",
     "@solana/buffer-layout": "^4.0.0",
