--- a/.github/workflows/test-api-e2e.yml
+++ b/.github/workflows/test-api-e2e.yml
@@ -15,14 +15,14 @@ env:
   COOKIE_DOMAIN: 'localhost'
   COOKIE_NAME: '__session'
   DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami'
+  DEFAULT_MINT_AIRDROP_AMOUNT: 1000
+  DEFAULT_MINT_AIRDROP_MAX: 50000
+  DEFAULT_MINT_AIRDROP_SECRET_KEY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
+  DEFAULT_MINT_DECIMALS: 5
+  DEFAULT_MINT_PUBLIC_KEY: 'MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek'
   JWT_SECRET: 'MogamiJwtSecret!'
-  MOGAMI_AIRDROP_DEFAULT: 1
-  MOGAMI_AIRDROP_MAX: 50000
-  MOGAMI_AIRDROP_SECRET_KEY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
-  MOGAMI_MINT_DECIMALS: 5
-  MOGAMI_MINT_PUBLIC_KEY: 'MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek'
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
-  SOLANA_RPC_ENDPOINT: 'http://localhost:8899'
+  SOLANA_DEVNET_RPC_ENDPOINT: 'http://localhost:8899'
 
 jobs:
   main:
