--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "prisma-erd-generator": "^0.11.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-moment": "^1.1.2",
     "react-router-dom": "5.3.0",
     "redirect-ssl": "^3.0.0",
     "reflect-metadata": "^0.1.13",
