--- a/package.json
+++ b/package.json
@@ -78,8 +78,7 @@
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "express": "^4.18.1",
-    "formik": "^2.2.9",
-    "formik-chakra-ui": "^1.6.0",
+    "final-form": "^4.20.7",
     "framer-motion": "^6.3.5",
     "fs-extra": "^10.1.0",
     "graphql": "^16.5.0",
@@ -95,6 +94,7 @@
     "prisma-erd-generator": "^0.11.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-final-form": "^6.5.9",
     "react-router-dom": "5.3.0",
     "redirect-ssl": "^3.0.0",
     "reflect-metadata": "^0.1.13",
