--- a/package.json
+++ b/package.json
@@ -60,6 +60,15 @@
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.27.1",
+    "@opentelemetry/core": "^1.0.1",
+    "@opentelemetry/exporter-jaeger": "^1.0.1",
+    "@opentelemetry/exporter-prometheus": "^0.27.0",
+    "@opentelemetry/host-metrics": "^0.27.0",
+    "@opentelemetry/instrumentation-graphql": "^0.27.1",
+    "@opentelemetry/propagator-b3": "^1.0.1",
+    "@opentelemetry/propagator-jaeger": "^1.0.1",
+    "@opentelemetry/sdk-node": "^0.27.0",
     "@prisma/client": "^3.14.0",
     "@scure/bip39": "^1.0.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -88,6 +97,8 @@
     "joi": "^17.6.0",
     "json-bigint-patch": "^0.0.8",
     "lodash": "^4.17.21",
+    "nestjs-otel": "^3.0.4",
+    "opentelemetry-node-metrics": "^1.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -135,6 +146,7 @@
     "@nrwl/web": "14.1.9",
     "@nrwl/workspace": "14.1.9",
     "@openapitools/openapi-generator-cli": "^2.5.1",
+    "@opentelemetry/api-metrics": "^0.27.0",
     "@swc/core": "^1.2.194",
     "@swc/helpers": "^0.3.16",
     "@testing-library/react": "13.3.0",
