--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react": "^2.2.1",
+    "@chakra-ui/system": "^2.1.3",
     "@chakra-ui/theme": "^2.1.0",
     "@chakra-ui/theme-tools": "^2.0.2",
     "@choc-ui/chakra-autocomplete": "^4.22.0",
@@ -135,10 +136,10 @@
     "@nrwl/web": "14.1.9",
     "@nrwl/workspace": "14.1.9",
     "@openapitools/openapi-generator-cli": "^2.5.1",
+    "@prisma/generator-helper": "^3.15.0",
     "@swc/core": "^1.2.194",
     "@swc/helpers": "^0.3.16",
     "@testing-library/react": "13.3.0",
-    "@testing-library/react-hooks": "8.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
     "@types/create-hmac": "^1.1.0",
