--- a/package.json
+++ b/package.json
@@ -121,20 +121,20 @@
     "@mermaid-js/mermaid-cli": "^9.1.2",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.5",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "14.1.9",
-    "@nrwl/devkit": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/js": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/nest": "14.1.9",
-    "@nrwl/node": "14.1.9",
+    "@nrwl/cli": "14.2.1",
+    "@nrwl/cypress": "14.2.1",
+    "@nrwl/devkit": "14.2.1",
+    "@nrwl/eslint-plugin-nx": "14.2.1",
+    "@nrwl/jest": "14.2.1",
+    "@nrwl/js": "14.2.1",
+    "@nrwl/linter": "14.2.1",
+    "@nrwl/nest": "14.2.1",
+    "@nrwl/node": "14.2.1",
     "@nrwl/nx-cloud": "14.0.5",
-    "@nrwl/nx-plugin": "14.1.9",
-    "@nrwl/react": "14.1.9",
-    "@nrwl/web": "14.1.9",
-    "@nrwl/workspace": "14.1.9",
+    "@nrwl/nx-plugin": "14.2.1",
+    "@nrwl/react": "14.2.1",
+    "@nrwl/web": "14.2.1",
+    "@nrwl/workspace": "14.2.1",
     "@openapitools/openapi-generator-cli": "^2.5.1",
     "@prisma/generator-helper": "^3.15.0",
     "@swc/core": "^1.2.194",
@@ -151,12 +151,12 @@
     "@types/react-router-dom": "5.3.3",
     "@types/supertest": "^2.0.12",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.26.0",
-    "@typescript-eslint/parser": "5.26.0",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.2.5",
     "cypress": "^9.7.0",
-    "eslint": "8.16.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
@@ -168,16 +168,16 @@
     "jest": "27.5.1",
     "lint-staged": "^12.4.3",
     "nodemon": "^2.0.16",
-    "nx": "14.1.9",
-    "prettier": "^2.6.2",
+    "nx": "14.2.1",
+    "prettier": "2.6.2",
     "prisma": "^3.14.0",
     "react-test-renderer": "18.1.0",
     "stream-browserify": "^3.0.0",
     "supertest": "6.2.3",
     "ts-jest": "27.1.4",
     "ts-morph": "^15.0.0",
-    "ts-node": "^10.8.0",
-    "typescript": "~4.7.2",
+    "ts-node": "10.8.1",
+    "typescript": "4.7.3",
     "webpack": "5.72.1"
   },
   "lint-staged": {
