--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/demo/src",
   "projectType": "application",
   "targets": {
