--- a/libs/admin/auth/data-access/project.json
+++ b/libs/admin/auth/data-access/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/admin/auth/data-access/src",
   "projectType": "library",
   "tags": ["type:data-access", "scope:admin"],
