--- a/libs/admin/cluster/ui/project.json
+++ b/libs/admin/cluster/ui/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/admin/cluster/ui/src",
   "projectType": "library",
   "tags": ["type:ui", "scope:admin"],
