--- a/libs/demo/keypair/ui/project.json
+++ b/libs/demo/keypair/ui/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/demo/keypair/ui/src",
   "projectType": "library",
   "tags": ["type:ui", "scope:demo"],
