--- a/libs/demo/server/feature/project.json
+++ b/libs/demo/server/feature/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/demo/server/feature/src",
   "projectType": "library",
   "tags": ["type:feature", "scope:demo"],
