--- a/libs/shared/util/admin-sdk/project.json
+++ b/libs/shared/util/admin-sdk/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/util/admin-sdk/src",
   "projectType": "library",
   "tags": ["type:util", "scope:shared"],
