--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_1_NAME="App 1"
 COOKIE_DOMAIN="localhost"
 #COOKIE_NAME="__session"
 CORS_ORIGINS=http://localhost:4200
-METRICS_ENABLED=false
+#METRICS_ENABLED=true
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami"
 JWT_SECRET="MogamiJwtSecret!"
 #DEFAULT_MINT_AIRDROP_AMOUNT=1000
