feat: expose Prometheus metrics through a Nest controller

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@mogami-dev/jest": ["libs/dev/jest/src/index.ts"],
+      "@mogami-dev/opentelemetry-exporter-nest": ["libs/dev/opentelemetry-exporter-nest/src/index.ts"],
       "@mogami/admin/app/feature": ["libs/admin/app/feature/src/index.ts"],
       "@mogami/admin/app/ui": ["libs/admin/app/ui/src/index.ts"],
       "@mogami/admin/auth/data-access": ["libs/admin/auth/data-access/src/index.ts"],
