--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
+    "@opentelemetry/api": "^1.1.0",
     "@opentelemetry/core": "^1.0.1",
     "@opentelemetry/exporter-prometheus": "^0.27.0",
     "@opentelemetry/sdk-node": "^0.27.0",
