chore: Force cypress debug logs on CI

--- a/.github/workflows/test-demo-e2e.yml
+++ b/.github/workflows/test-demo-e2e.yml
@@ -24,6 +24,7 @@ env:
   JWT_SECRET: 'MogamiJwtSecret!'
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
   SOLANA_DEVNET_RPC_ENDPOINT: 'http://localhost:8899'
+  DEBUG: cypress:*
 
 jobs:
   main:
