feat: Add Opentelemetry with nestjs-otel (#240)
* feat: Add Opentelemetry with nestjs-otel

* feat: Clean code

* feat: Add code instrumentation

* fix: Individual metrics by appIndex

* test: Import OpenTelemetryModule to fix tests

* refactor: simplify nestjs-otel usage and fix tests

* refactor: simplify nestjs-otel initalisation

* refactor: clean up OpenTelemetry initialisation

* refactor: clean up how Counters are created/used

* fix: add appKey attribute to createAccount operation

* refactor: improve consistency of counter naming

* refactor: improve consistency of counter naming

* refactor: clean up open-telemetry sdk and config

* refactor: clean up open-telemetry sdk and config

* refactor: clean up tests

* refactor: clean up tests

* feat: expose Prometheus metrics through a Nest controller

* fix: add correct counters to makeTransfer methods

* fix: test

* chore: add local prometheus and grafana setup

* chore: update mogami api dashboard

Co-authored-by: Bram Borggreve <borggreve@gmail.com>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:admin-sdk": "yarn build:admin-sdk --watch",
     "dev:api": "nx serve api",
     "dev:demo": "nx serve demo",
+    "dev:monitoring": "docker compose -f ./docker-compose.monitoring.yml up",
     "dev:sdk": "nodemon --watch ./api-swagger.json -x 'yarn build:sdk'",
     "dev:services": "docker compose up",
     "dev:services:postgres": "docker compose up postgres",
@@ -60,6 +61,10 @@
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
+    "@opentelemetry/api": "^1.1.0",
+    "@opentelemetry/core": "^1.0.1",
+    "@opentelemetry/exporter-prometheus": "^0.27.0",
+    "@opentelemetry/sdk-node": "^0.27.0",
     "@prisma/client": "^3.14.0",
     "@scure/bip39": "^1.0.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -88,6 +93,8 @@
     "joi": "^17.6.0",
     "json-bigint-patch": "^0.0.8",
     "lodash": "^4.17.21",
+    "nestjs-otel": "^3.0.4",
+    "opentelemetry-node-metrics": "^1.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -135,6 +142,7 @@
     "@nrwl/web": "14.1.9",
     "@nrwl/workspace": "14.1.9",
     "@openapitools/openapi-generator-cli": "^2.5.1",
+    "@opentelemetry/api-metrics": "^0.27.0",
     "@swc/core": "^1.2.194",
     "@swc/helpers": "^0.3.16",
     "@testing-library/react": "13.3.0",
