--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "babel-jest": "27.5.1",
     "babel-loader": "8.2.5",
     "cypress": "^9.7.0",
+    "del": "^6.1.1",
     "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
