test: Temporarily disable coverage and use Chrome

--- a/.github/workflows/test-demo-e2e.yml
+++ b/.github/workflows/test-demo-e2e.yml
@@ -64,7 +64,7 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn cypress install
       - run: yarn prisma db push
-      - run: yarn nx e2e demo-e2e --skip-nx-cache
+      - run: yarn nx e2e demo-e2e --skip-nx-cache --chrome
   pr:
     runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'pull_request' }}
