--- a/.github/workflows/test-admin-e2e.yml
+++ b/.github/workflows/test-admin-e2e.yml
@@ -14,13 +14,13 @@ env:
   APP_1_NAME: 'App 1'
   COOKIE_DOMAIN: 'localhost'
   COOKIE_NAME: '__session'
-  DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami'
+  DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic'
   DEFAULT_MINT_AIRDROP_AMOUNT: 1000
   DEFAULT_MINT_AIRDROP_MAX: 50000
   DEFAULT_MINT_AIRDROP_SECRET_KEY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
   DEFAULT_MINT_DECIMALS: 5
   DEFAULT_MINT_PUBLIC_KEY: 'MoGaMuJnB3k8zXjBYBnHxHG47vWcW3nyb7bFYvdVzek'
-  JWT_SECRET: 'MogamiJwtSecret!'
+  JWT_SECRET: 'KineticJwtSecret!'
   NX_CLOUD_DISTRIBUTED_EXECUTION: false
   SOLANA_DEVNET_RPC_ENDPOINT: 'http://localhost:8899'
 
@@ -38,7 +38,7 @@ jobs:
         ports: ['5432:5432']
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
       solana:
-        image: ghcr.io/kin-labs/mogami-solana-network:latest
+        image: ghcr.io/kin-labs/kinetic-solana-network:latest
         ports: ['8899:8899', '8900:8900']
     steps:
       - uses: actions/checkout@v3
@@ -69,7 +69,7 @@ jobs:
         ports: ['5432:5432']
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
       solana:
-        image: ghcr.io/kin-labs/mogami-solana-network:latest
+        image: ghcr.io/kin-labs/kinetic-solana-network:latest
         ports: ['8899:8899', '8900:8900']
     steps:
       - uses: actions/checkout@v2
