--- a/tools/prometheus.yaml
+++ b/tools/prometheus.yaml
@@ -3,7 +3,7 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: 'mogami-api'
+  - job_name: 'kinetic-api'
     metrics_path: '/api/metrics'
     static_configs:
       - targets: ['host.docker.internal:3000']
